fix: prevent overflow of name in saved palettes

--- a/src/components/palette/SavedPalette.scss
+++ b/src/components/palette/SavedPalette.scss
@@ -121,6 +121,12 @@
         justify-content: space-between;
         position: relative;
 
+        p{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
         form{
             display: flex;
             justify-content: start;
